--- a/src/css/theme/contrast-light.scss
+++ b/src/css/theme/contrast-light.scss
@@ -2,14 +2,21 @@
 
 $base-color-fg: #1c1f23 !default;
 
+@mixin scheme() {
+  color-scheme: light;
+  --km-border-color: #{$base-color-fg};
+  --km-fg-color-minor: rgb(from #{$base-color-fg} r g b / 80%);
+  --km-leading-color: rgb(from #{$base-color-fg} r g b / 80%);
+  --km-hover-bg-color: #c6cacd;
+  --km-focus-outline-color: #00439c;
+}
+
 @media (prefers-contrast: more) {
-  :root,
-  html[data-contrast='more']:root {
-    color-scheme: light;
-    --km-border-color: #{$base-color-fg};
-    --km-fg-color-minor: rgb(from #{$base-color-fg} r g b / 80%);
-    --km-leading-color: rgb(from #{$base-color-fg} r g b / 80%);
-    --km-hover-bg-color: #c6cacd;
-    --km-focus-outline-color: #00439c;
+  :root {
+    @include scheme;
   }
+}
+
+html[data-contrast='more']:root {
+  @include scheme;
 }
